Prima versione beta della tesi

--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -3,7 +3,7 @@
 \chapter*{Introduzione}
 \markboth{Introduzione}{}
 
-L'evoluzione tecnologica nel settore agricolo ha introdotto concetti fondamentali come l'agricoltura di precisione e il tracciamento dei prodotti alimentari, rivoluzionando il modo in cui affrontiamo le sfide legate alla produzione agricola.
+L'evoluzione tecnologica nel settore agricolo ha introdotto concetti fondamentali, come l'agricoltura di precisione e il tracciamento dei prodotti alimentari, rivoluzionando il modo in cui affrontiamo le sfide legate alla produzione agricola.
 
 L'agricoltura di precisione, con la sua capacità di raccogliere dati dettagliati attraverso l'uso di tecnologie avanzate, ha dimostrato di essere una risorsa cruciale per ottimizzare le pratiche agricole. Il tracciamento dei prodotti alimentari, d'altro canto, ha assunto un ruolo di primaria importanza nella garanzia della qualità e nella sicurezza alimentare, permettendo ai consumatori di accedere a informazioni accurate riguardo all'origine e alla produzione degli alimenti che consumano.
 
@@ -11,9 +11,9 @@ Nel contesto specifico della viticoltura, la prevenzione delle malattie rapprese
 
 Attraverso l'integrazione di dati provenienti da sensori sul campo e l'utilizzo di dati provenienti dall'API OpenWeather, l'applicazione proposta mira non solo a identificare le bottiglie di vino, ma anche a fornire una panoramica sulle condizioni del vigneto consentendo interventi tempestivi per prevenire e gestire le malattie.
 
-Il presente lavoro si propone, quindi, nel contribuire allo sviluppo di soluzioni innovative nel settore vitivinicolo, sfruttando le potenzialità dell'agricoltura di precisione e del tracciamento avanzato per garantire la sostenibilità e la prosperità del settore, promuovendo al contempo una maggiore consapevolezza nei consumatori riguardo all'origine e alla qualità dei prodotti vinicoli.
+Il presente lavoro si propone, quindi, di contribuire allo sviluppo di soluzioni innovative nel settore vitivinicolo, sfruttando le potenzialità dell'agricoltura di precisione e del tracciamento avanzato per garantire la sostenibilità e la prosperità del settore, promuovendo al contempo una maggiore consapevolezza nei consumatori riguardo all'origine e alla qualità dei prodotti vinicoli.
 
-Più specificatamente, ci si propone di sviluppare di un'applicazione Android in grado di riconoscere le bottiglie di vino e visualizzarne le informazioni relative allo stato di salute del vigneto di provenienza. Inizialmente, sono stati identificati gli strumenti software necessari allo sviluppo dell'applicazione, tra cui \textit{Unity}, \textit{Vuforia Engine}, e \textit{Polycam}. Successivamente, sono stati illustrati gli aspetti progettuali, con la selezione delle versioni di ciascun software per evitare potenziali problemi di compatibilità. Sono stati presentati i Class Diagram e i Sequence Diagram al fine di fornire un quadro chiaro degli aspetti software cruciali dell'applicazione.
+Più specificatamente, ci si propone di sviluppare un'applicazione Android in grado di riconoscere le bottiglie di vino e visualizzarne le informazioni relative allo stato di salute del vigneto di provenienza. Inizialmente, sono stati identificati gli strumenti software necessari allo sviluppo dell'applicazione, tra cui \textit{Unity}, \textit{Vuforia Engine}, e \textit{Polycam}. Successivamente, sono stati illustrati gli aspetti progettuali, con la selezione delle versioni di ciascun software per evitare potenziali problemi di compatibilità. Sono stati presentati i Class Diagram e i Sequence Diagram al fine di fornire un quadro chiaro degli aspetti software cruciali dell'applicazione.
 
 Nella fase successiva, è stato esaminato approfonditamente il codice delle classi C\# più rilevanti del progetto, al fine di chiarire ogni aspetto implementativo e giustificare le scelte progettuali effettuate durante la fase di progettazione.
 
