--- a/backmatter/bibliography.tex
+++ b/backmatter/bibliography.tex
@@ -13,12 +13,13 @@
 \vspace{4cm}
 \begin{Large}Siti web consultati\end{Large}
 \begin{itemize}
-    \item Unity Real-Time Development Platform | 3D, 2D, VR \& AR Engine -- \url{www.unity.com};
-    \item Vuforia Engine Developer Portal \url{https://developer.vuforia.com};
-    \item Polycam - LiDAR \& 3D Scanner for iPhone \& Android \url{https://poly.cam};
-    \item blender.org - Home of the Blender project - Free and Open 3D Creation Software \url{https://www.blender.org};
-    \item Google Earth Studio \url{https://www.google.com/intl/it/earth/studio/};
-    \item MongoDB: La Piattaforma Di Dati Applicativi | MongoDB \url{https://www.mongodb.com/it-it};
-    \item Vivino - Acquista il vino giusto -- \url{www.vivino.com};
+    \item Unity Real-Time Development Platform | 3D, 2D, VR \& AR Engine -- \url{https://www.unity.com};
+    \item Vuforia Engine Developer Portal -- \url{https://developer.vuforia.com};
+    \item Polycam - LiDAR \& 3D Scanner for iPhone \& Android -- \url{https://poly.cam};
+    \item blender.org - Home of the Blender project - Free and Open 3D Creation Software -- \url{https://www.blender.org};
+    \item Google Earth Studio -- \url{https://www.google.com/intl/it/earth/studio/};
+    \item MongoDB: La Piattaforma Di Dati Applicativi | MongoDB -- \url{https://www.mongodb.com/it-it};
+    \item Vigneto Sicuro: il sistema facile per gestire al meglio i tuoi campi -- \url{https://www.vignetosicuro.it};
+    \item Vivino - Acquista il vino giusto -- \url{https://www.vivino.com};
 \end{itemize}
 
