Beta della tesi

--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -11,7 +11,7 @@ Nel contesto specifico della viticoltura, la prevenzione delle malattie rapprese
 
 Attraverso l'integrazione di dati provenienti da sensori sul campo e l'utilizzo di dati provenienti dall'API OpenWeather, l'applicazione proposta mira non solo a identificare le bottiglie di vino, ma anche a fornire una panoramica sulle condizioni del vigneto consentendo interventi tempestivi per prevenire e gestire le malattie.
 
-Il presente lavoro si propone, quindi, di contribuire allo sviluppo di soluzioni innovative nel settore vitivinicolo, sfruttando le potenzialità dell'agricoltura di precisione e del tracciamento avanzato per garantire la sostenibilità e la prosperità del settore, promuovendo al contempo una maggiore consapevolezza nei consumatori riguardo all'origine e alla qualità dei prodotti vinicoli.
+Il presente lavoro si propone, quindi, di contribuire allo sviluppo di soluzioni innovative nel settore vitivinicolo, sfruttando le potenzialità dell'agricoltura di precisione e del tracciamento avanzato per garantire la sostenibilità e la prosperità del settore, promuovendo, al contempo, una maggiore consapevolezza nei consumatori riguardo all'origine e alla qualità dei prodotti vinicoli.
 
 Più specificatamente, ci si propone di sviluppare un'applicazione Android in grado di riconoscere le bottiglie di vino e visualizzarne le informazioni relative allo stato di salute del vigneto di provenienza. Inizialmente, sono stati identificati gli strumenti software necessari allo sviluppo dell'applicazione, tra cui \textit{Unity}, \textit{Vuforia Engine}, e \textit{Polycam}. Successivamente, sono stati illustrati gli aspetti progettuali, con la selezione delle versioni di ciascun software per evitare potenziali problemi di compatibilità. Sono stati presentati i Class Diagram e i Sequence Diagram al fine di fornire un quadro chiaro degli aspetti software cruciali dell'applicazione.
 
